<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.woshikid</groupId>
  <artifactId>java-utils</artifactId>
  <version>1.1.5</version>
  <name>woshikid-utils</name>
  <description>java utils built by @woshikid</description>
  <url>https://github.com/woshikid/java-utils</url>
  <licenses>
  	<license>
  		<name>The Apache License, Version 2.0</name>
  		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
  	</license>
  </licenses>
  <developers>
  	<developer>
  		<name>woshikid</name>
  		<email>name.kid@gmail.com</email>
  		<organization>woshikid</organization>
  		<organizationUrl>https://github.com/woshikid</organizationUrl>
  	</developer>
  </developers>
  <scm>
  	<connection>scm:git:https://github.com/woshikid/java-utils.git</connection>
  	<developerConnection>scm:git:https://github.com/woshikid/java-utils.git</developerConnection>
  	<url>https://github.com/woshikid/java-utils/tree/master</url>
  </scm>
  <dependencies>
  	<dependency>
  		<groupId>com.alibaba</groupId>
  		<artifactId>fastjson</artifactId>
  		<version>1.2.33</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>org.bouncycastle</groupId>
  		<artifactId>bcprov-jdk15on</artifactId>
  		<version>1.57</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>ch.qos.logback</groupId>
  		<artifactId>logback-classic</artifactId>
  		<version>1.2.3</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>jcl-over-slf4j</artifactId>
  		<version>1.7.25</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>log4j-over-slf4j</artifactId>
  		<version>1.7.25</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>jul-to-slf4j</artifactId>
  		<version>1.7.25</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-lang3</artifactId>
  		<version>3.6</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.axis2</groupId>
  		<artifactId>axis2-adb</artifactId>
  		<version>1.7.5</version>
  		<exclusions>
  			<exclusion>
  				<groupId>commons-logging</groupId>
  				<artifactId>commons-logging</artifactId>
  			</exclusion>
  			<exclusion>
  				<groupId>javax.servlet</groupId>
  				<artifactId>servlet-api</artifactId>
  			</exclusion>
  		</exclusions>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.axis2</groupId>
  		<artifactId>axis2-transport-local</artifactId>
  		<version>1.7.5</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.axis2</groupId>
  		<artifactId>axis2-transport-http</artifactId>
  		<version>1.7.5</version>
  		<exclusions>
  			<exclusion>
  				<groupId>commons-logging</groupId>
  				<artifactId>commons-logging</artifactId>
  			</exclusion>
  		</exclusions>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.axis2</groupId>
  		<artifactId>axis2-jaxws</artifactId>
  		<version>1.7.5</version>
  		<exclusions>
  			<exclusion>
  				<groupId>org.apache.geronimo.specs</groupId>
  				<artifactId>geronimo-javamail_1.4_spec</artifactId>
  			</exclusion>
  		</exclusions>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>redis.clients</groupId>
  		<artifactId>jedis</artifactId>
  		<version>2.9.0</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>net.sf.ehcache</groupId>
  		<artifactId>ehcache</artifactId>
  		<version>2.10.4</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.zookeeper</groupId>
  		<artifactId>zookeeper</artifactId>
  		<version>3.5.5</version>
  		<exclusions>
  			<exclusion>
  				<groupId>org.slf4j</groupId>
  				<artifactId>slf4j-log4j12</artifactId>
  			</exclusion>
  			<exclusion>
  				<groupId>log4j</groupId>
  				<artifactId>log4j</artifactId>
  			</exclusion>
  		</exclusions>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>javax.servlet</groupId>
  		<artifactId>javax.servlet-api</artifactId>
  		<version>3.1.0</version>
  		<scope>provided</scope>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>javax.mail</groupId>
  		<artifactId>mail</artifactId>
  		<version>1.4.7</version>
  		<optional>true</optional>
  	</dependency>
  	<dependency>
  		<groupId>commons-net</groupId>
  		<artifactId>commons-net</artifactId>
  		<version>3.6</version>
  		<optional>true</optional>
  	</dependency>
  </dependencies>
  <build>
  	<finalName>woshikid-utils-${project.version}</finalName>
  	<resources>
  		<resource>
  			<directory>src/main/resources</directory>
  			<filtering>true</filtering>
  		</resource>
  	</resources>
  	<filters>
  		<filter>config.properties</filter>
  	</filters>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-resources-plugin</artifactId>
  			<configuration>
  				<encoding>UTF-8</encoding>
  			</configuration>
  		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<configuration>
  				<compilerArgument>-parameters</compilerArgument>
  				<source>1.8</source>
  				<target>1.8</target>
  				<encoding>UTF-8</encoding>
  			</configuration>
  		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-jar-plugin</artifactId>
  			<configuration>
  				<excludes>
  					<exclude>*.xml</exclude>
  					<exclude>*.properties</exclude>
  				</excludes>
  			</configuration>
  		</plugin>
  	</plugins>
  </build>
  <profiles>
  	<profile>
  		<id>release</id>
  		<build>
  			<plugins>
	  			<plugin>
		  			<groupId>org.apache.maven.plugins</groupId>
		  			<artifactId>maven-source-plugin</artifactId>
		  			<executions>
		  				<execution>
		  					<goals>
		  						<goal>jar-no-fork</goal>
		  					</goals>
		  				</execution>
		  			</executions>
		  		</plugin>
		  		<plugin>
		  			<groupId>org.apache.maven.plugins</groupId>
		  			<artifactId>maven-javadoc-plugin</artifactId>
		  			<configuration>
		  				<charset>UTF-8</charset>
		  				<encoding>UTF-8</encoding>
		  				<docencoding>UTF-8</docencoding>
		  			</configuration>
		  			<executions>
		  				<execution>
		  					<goals>
		  						<goal>jar</goal>
		  					</goals>
		  				</execution>
		  			</executions>
		  		</plugin>
		  		<plugin>
		  			<groupId>org.apache.maven.plugins</groupId>
		  			<artifactId>maven-gpg-plugin</artifactId>
		  			<executions>
		  				<execution>
		  					<phase>verify</phase>
		  					<goals>
		  						<goal>sign</goal>
		  					</goals>
		  				</execution>
		  			</executions>
		  		</plugin>
		  		<plugin>
		  			<groupId>org.sonatype.plugins</groupId>
		  			<artifactId>nexus-staging-maven-plugin</artifactId>
		  			<extensions>true</extensions>
		  			<configuration>
		  				<serverId>ossrh</serverId>
		  				<nexusUrl>https://oss.sonatype.org/</nexusUrl>
		  				<autoReleaseAfterClose>true</autoReleaseAfterClose>
		  			</configuration>
		  		</plugin>
	  		</plugins>
  		</build>
  	</profile>
  </profiles>
  <distributionManagement>
  	<snapshotRepository>
  		<id>ossrh</id>
  		<url>https://oss.sonatype.org/content/repositories/snapshots</url>
  	</snapshotRepository>
  	<repository>
  		<id>ossrh</id>
  		<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
  	</repository>
  </distributionManagement>
</project>